# bigmem

./: CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/scripts/: reinject-memories.sh
.claude/skills/bigmem/: SKILL.md
docs/.claude/skills/bigmem/: SKILL.md
docs/bigmem/: SKILL.md
eval/: conftest.py
eval/golden/: .gitignore
eval/harness/: claude_runner.py  prompt_templates.py
eval/scoring/: report.py  scorer.py
eval/seed/: build_golden_db.py  ground_truth.json
eval/tests/: test_single_agent.py  test_store_recall.py
skills/: README.md
skills/bigmem/: SKILL.md
skills/recall/: SKILL.md
skills/remember/: SKILL.md
src/bigmem/: __main__.py  cli.py  db.py  models.py  store.py
tests/: conftest.py  test_bench.py  test_cli.py  test_db.py  test_store.py  test_stress.py
