[project]
name = "bigmem"
version = "0.1.0"
description = "SQLite-backed memory store for AI agents"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bigmem = "bigmem.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bigmem"]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
